# mcmot

./: .gitignore  MCMOTracker.py  README.md  create_venv.sh  cvat.db.dump  multi_camera_example.py  pyproject.toml  run_mcmot_api.py  test.py  test_multi_camera.py  test_recorded_video.py  test_single_camera.py  test_stereo_camera.py  test_yolo_single_camera.py  test_yolo_video.py  util.py
artifacts/: scene_mesh.glb
camera_calibration/lab_logitech_2/: lab_logitech_2.npz
config/: aruco_config.py  bytetrack.yaml
cvat_aa/: convert_to_detection.py  cvat_aa_yolo.py  cvat_aa_yolo_bidirection.py  cvat_aa_yolo_simple.py  cvat_aa_yolo_tracking  cvat_aa_yolo_tracking.py  detection_config.yml  mp4_to_images.py  register_tracking_function.py  split_video.py  try_agent_approach.py  upload_tracking_function.py  use_tracking_function.py
multi_camera_detection/: camera_calibration.py  multi_camer_tracker_custom.py  view_all_cameras.py
multi_camera_detection/archive/: aruco_test.ipynb  aruco_test.py  multi_camera_tracker.py  multi_camera_tracker_short.py  webcam_part_detection.py
ned2_pose/: extract_frames.py  ned2_pose_train.py  ned2_pose_viz_images.py  ned2_pose_viz_video.py
oak_tests/: SpatialVisualizer.py  test_oak.py
pipeline_test/: depthanything_test.py  two_camera_test.py
plan/: prompts.md  source_class_diagram.mmd
src/mcmo_tracker.egg-info/: PKG-INFO  SOURCES.txt
train_yolo/: check_yolo_annotations.py  dataset.yaml  dataset_info.csv  train_yolo_short.py  upload_model_to_roboflow.py
webui/: index.html  package-lock.json  package.json  vite.config.js
(+35 files in other folders)
