[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmot"
version = "0.1.0"
description = "Multi-Camera Multi-Object Tracker using YOLO, calibration, and triangulation"
authors = [
    { name="Steven Blum", email="steven@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "torch",
    "ultralytics",
    "filterpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/stevenblum/mcmo-tracker"
